[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/menus/elements/audio_sliders.gd" type="Script" id=1]
[ext_resource path="res://scripts/menus/SliderScript.gd" type="Script" id=2]

[node name="audioSliders" type="Control"]
margin_right = 328.0
margin_bottom = 72.0
rect_scale = Vector2( 1.2, 1.2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 107.0
margin_bottom = 20.0
text = "Volume Sliders:"
valign = 1

[node name="Main" type="Label" parent="."]
margin_top = 20.0
margin_right = 33.0
margin_bottom = 40.0
text = "Main"
valign = 1

[node name="Music" type="Label" parent="."]
margin_top = 46.6667
margin_right = 40.0
margin_bottom = 66.6667
text = "Music"
valign = 1

[node name="SFX" type="Label" parent="."]
margin_top = 73.3333
margin_right = 33.0
margin_bottom = 93.3333
text = "SFX"
valign = 1

[node name="MainSlider" type="HSlider" parent="."]
margin_left = 60.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
max_value = 1.5
step = 0.02
value = 1.0
script = ExtResource( 2 )

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 60.0
margin_top = 46.6667
margin_right = 320.0
margin_bottom = 66.6667
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.02
value = 1.0
script = ExtResource( 2 )

[node name="SFXSlider" type="HSlider" parent="."]
margin_left = 60.0
margin_top = 73.3333
margin_right = 320.0
margin_bottom = 93.3333
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.02
value = 1.0
script = ExtResource( 2 )

[connection signal="drag_ended" from="MainSlider" to="." method="_on_MainSlider_drag_ended"]
[connection signal="value_changed" from="MainSlider" to="." method="_on_MainSlider_value_changed"]
[connection signal="drag_ended" from="MusicSlider" to="." method="_on_MusicSlider_drag_ended"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="drag_ended" from="SFXSlider" to="." method="_on_SFXSlider_drag_ended"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
